create knowledge filters now top pattern with numberofocc \ge then 20