@@ -4,6 +4,8 @@ import java.io.BufferedWriter;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
 
@@ -20,10 +22,12 @@ import de.uni_leipzig.simba.boa.backend.configuration.NLPediaSettings;
 import de.uni_leipzig.simba.boa.backend.configuration.command.Command;
 import de.uni_leipzig.simba.boa.backend.dao.DaoFactory;
 import de.uni_leipzig.simba.boa.backend.dao.pattern.PatternDao;
+import de.uni_leipzig.simba.boa.backend.dao.pattern.PatternMappingDao;
 import de.uni_leipzig.simba.boa.backend.entity.context.Context;
 import de.uni_leipzig.simba.boa.backend.entity.context.LeftContext;
 import de.uni_leipzig.simba.boa.backend.entity.context.RightContext;
 import de.uni_leipzig.simba.boa.backend.entity.pattern.Pattern;
+import de.uni_leipzig.simba.boa.backend.entity.pattern.PatternMapping;
 import de.uni_leipzig.simba.boa.backend.logging.NLPediaLogger;
 import de.uni_leipzig.simba.boa.backend.nlp.NamedEntityRecognizer;
 import de.uni_leipzig.simba.boa.backend.rdf.Model;
@@ -40,13 +44,13 @@ import de.uni_leipzig.simba.boa.backend.util.DbpediaUtil;
 public class CreateKnowledgeCommand implements Command {
 
 	private final NLPediaLogger logger = new NLPediaLogger(CreateKnowledgeCommand.class);
-	private final PatternDao patternDao = (PatternDao) DaoFactory.getInstance().createDAO(PatternDao.class);
+	private final PatternMappingDao patternMappingDao = (PatternMappingDao) DaoFactory.getInstance().createDAO(PatternMappingDao.class);
 	
 	private final NamedEntityRecognizer ner = new NamedEntityRecognizer();
 	private final Store store = new Store();
 	private final Property rdfType;
 	private final Property rdfsLabel;
-	private final List<Pattern> patternList = patternDao.findAllPatterns();
+	private final List<PatternMapping> patternMappingList = patternMappingDao.findAllPatternMappings();
 	private Model model;
 	private List<String> statementList = new ArrayList<String>();
 	
@@ -63,144 +67,146 @@ public class CreateKnowledgeCommand implements Command {
 	@Override public void execute() {
 
 		try {
+
+			BufferedWriter out = new BufferedWriter(new FileWriter(NLPediaSettings.getInstance().getSetting("rdfModelFile")));
 			
 			PatternSearcher patternSearcher = new PatternSearcher(NLPediaSettings.getInstance().getSetting("sentenceIndexDirectory"));
 			
-			System.out.println("Querying index for " + this.patternList.size() + " patterns!");
-			
-			BufferedWriter out = new BufferedWriter(new FileWriter(NLPediaSettings.getInstance().getSetting("rdfModelFile")));
-			
-			for ( Pattern pattern : patternList ) {
+			for ( PatternMapping mapping : this.patternMappingList) {
 				
-				if ( pattern.isUseForPatternEvaluation() && pattern.getConfidence() != null ) {
+				System.out.println("Querying pattern: " + mapping.getUri());
+				
+				List<Pattern> patternList = this.getTopNPattern(mapping, 1);
+				
+				System.out.println(patternList.size() + " patterns found!");
+				System.out.println(patternList.get(0));
+				
+				for ( Pattern pattern : patternList ) {
 					
-					if ( pattern.getConfidence() >= new Double(NLPediaSettings.getInstance().getSetting("createKnowledgeThreshold")) ) {
+					System.out.println("Querying pattern: " + pattern.getNaturalLanguageRepresentation() + " [ID:"+pattern.getId()+", conf:"+pattern.getDoubleSupportConfidence()+"]");
+					
+					String domainUri	= pattern.getPatternMapping().getRdfsDomain();
+					String rangeUri		= pattern.getPatternMapping().getRdfsRange();
+					
+					String patternWithOutVariables = pattern.getNaturalLanguageRepresentation().substring(0, pattern.getNaturalLanguageRepresentation().length() - 3).substring(3).trim();
+					
+					this.logger.debug("Querying index for pattern \"" + patternWithOutVariables + "\".");
+					Set<String> sentences = patternSearcher.getSentencesWithString(patternWithOutVariables, Integer.valueOf(NLPediaSettings.getInstance().getSetting("maxNumberOfDocuments")));
+					this.logger.debug("Pattern \"" + patternWithOutVariables + "\" returned " + sentences.size() + " results.");
+					
+					for ( String foundString : sentences ) {
 						
-						System.out.println("Querying pattern: " + pattern.getNaturalLanguageRepresentation() + " [ID:"+pattern.getId()+"]");
+						String nerTagged = this.ner.recognizeEntitiesInString(foundString);
 						
-						String domainUri	= pattern.getPatternMapping().getRdfsDomain();
-						String rangeUri		= pattern.getPatternMapping().getRdfsRange();
-						
-						String patternWithOutVariables = pattern.getNaturalLanguageRepresentation().substring(0, pattern.getNaturalLanguageRepresentation().length() - 3).substring(3).trim();
-						
-						this.logger.debug("Querying index for pattern \"" + patternWithOutVariables + "\".");
-						Set<String> sentences = patternSearcher.getSentencesWithString(patternWithOutVariables, Integer.valueOf(NLPediaSettings.getInstance().getSetting("maxNumberOfDocuments")));
-						this.logger.debug("Pattern \"" + patternWithOutVariables + "\" returned " + sentences.size() + " results.");
-						
-						for ( String foundString : sentences ) {
+						try {
+	
+							Context leftContext = new LeftContext(nerTagged, foundString, patternWithOutVariables);
+							Context rightContext = new RightContext(nerTagged, foundString, patternWithOutVariables);
 							
-							String nerTagged = this.ner.recognizeEntitiesInString(foundString);
+							boolean beginsWithDomain = pattern.getNaturalLanguageRepresentation().startsWith("?D?") ? true : false;
 							
-							try {
-		
-								Context leftContext = new LeftContext(nerTagged, foundString, patternWithOutVariables);
-								Context rightContext = new RightContext(nerTagged, foundString, patternWithOutVariables);
+							if ( beginsWithDomain ) {
 								
-								boolean beginsWithDomain = pattern.getNaturalLanguageRepresentation().startsWith("?D?") ? true : false;
-								
-								if ( beginsWithDomain ) {
+								if ( leftContext.containsSuitableEntity(domainUri) && rightContext.containsSuitableEntity(rangeUri) ) {
 									
-									if ( leftContext.containsSuitableEntity(domainUri) && rightContext.containsSuitableEntity(rangeUri) ) {
-										
-										String leftLabel = leftContext.getSuitableEntity(domainUri);
-										String rightLabel = rightContext.getSuitableEntity(rangeUri);
-										
-										UriRetrieval uriRetrieval = new DbpediaUriRetrieval();
-										String leftUri = uriRetrieval.getUri(leftLabel);
-										String rightUri = uriRetrieval.getUri(rightLabel);
+									String leftLabel = leftContext.getSuitableEntity(domainUri);
+									String rightLabel = rightContext.getSuitableEntity(rangeUri);
+									
+									UriRetrieval uriRetrieval = new DbpediaUriRetrieval();
+									String leftUri = uriRetrieval.getUri(leftLabel);
+									String rightUri = uriRetrieval.getUri(rightLabel);
 
-//										boolean leftResourceHasCorrectType	= DbpediaUtil.getInstance().askIsResourceOfType(leftUri, domainUri);
-//										boolean rightResourceHasCorrectType	= DbpediaUtil.getInstance().askIsResourceOfType(rightUri, rangeUri);
-//										
-//										if ( rightResourceHasCorrectType && leftResourceHasCorrectType ) {
+//											boolean leftResourceHasCorrectType	= DbpediaUtil.getInstance().askIsResourceOfType(leftUri, domainUri);
+//											boolean rightResourceHasCorrectType	= DbpediaUtil.getInstance().askIsResourceOfType(rightUri, rangeUri);
 //											
-//											
-//										}
-										
-										RDFNode leftResource	= model.createResource(leftUri);
-										RDFNode rightResource	= model.createResource(rightUri);
-										
-										Statement link			= model.createStatement(leftResource, model.createProperty(pattern.getPatternMapping().getUri()), rightResource);
-//										Statement labelLeft		= model.createStatement((Resource)leftResource, this.rdfsLabel, leftLabel);
-//										Statement labelRight	= model.createStatement((Resource)rightResource, this.rdfsLabel, rightLabel);
-//										Statement typeLeft		= model.createStatement(leftResource, this.rdfType, model.createResource(pattern.getPatternMapping().getRdfsDomain()));
-//										Statement typeRight		= model.createStatement(rightResource, this.rdfType, model.createResource(pattern.getPatternMapping().getRdfsRange()));
-										
-										model.addStatement(link);
-//										model.addStatement(labelLeft);
-//										model.addStatement(labelRight);
-//										model.addStatement(typeLeft);
-//										model.addStatement(typeRight);
-										
-										if ( !statementList.contains(link.toString()) ) {
-											
-											statementList.add(link.toString());
-											out.append("FoundString: " + foundString + Constants.NEW_LINE_SEPARATOR);
-											out.append("LeftLabel(Domain):\t" + leftLabel + Constants.NEW_LINE_SEPARATOR);
-											out.append("Pattern: " + pattern.getNaturalLanguageRepresentation() + Constants.NEW_LINE_SEPARATOR);
-											out.append("RightLabel(Range):\t" + rightLabel + Constants.NEW_LINE_SEPARATOR);
-											out.append("Statement created: " + link.toString() + Constants.NEW_LINE_SEPARATOR);
-											out.append(Constants.NEW_LINE_SEPARATOR);
-											System.out.println("Statement created: " + link);
-										}
-									}
-								}
-								else {
+//											if ( rightResourceHasCorrectType && leftResourceHasCorrectType ) {
+//												
+//												
+//											}
 									
-									if ( leftContext.containsSuitableEntity(rangeUri) && rightContext.containsSuitableEntity(domainUri) ) {
+									RDFNode leftResource	= model.createResource(leftUri);
+									RDFNode rightResource	= model.createResource(rightUri);
+									
+									Statement link			= model.createStatement(leftResource, model.createProperty(pattern.getPatternMapping().getUri()), rightResource);
+//											Statement labelLeft		= model.createStatement((Resource)leftResource, this.rdfsLabel, leftLabel);
+//											Statement labelRight	= model.createStatement((Resource)rightResource, this.rdfsLabel, rightLabel);
+//											Statement typeLeft		= model.createStatement(leftResource, this.rdfType, model.createResource(pattern.getPatternMapping().getRdfsDomain()));
+//											Statement typeRight		= model.createStatement(rightResource, this.rdfType, model.createResource(pattern.getPatternMapping().getRdfsRange()));
+									
+									model.addStatement(link);
+//											model.addStatement(labelLeft);
+//											model.addStatement(labelRight);
+//											model.addStatement(typeLeft);
+//											model.addStatement(typeRight);
+									
+									if ( !statementList.contains(link.toString()) ) {
 										
-										String leftLabel = leftContext.getSuitableEntity(rangeUri);
-										String rightLabel = rightContext.getSuitableEntity(domainUri);
-										
-										UriRetrieval uriRetrieval = new DbpediaUriRetrieval();
-										String leftUri = uriRetrieval.getUri(leftLabel);
-										String rightUri = uriRetrieval.getUri(rightLabel);
-										
-//										boolean leftResourceHasCorrectType	= DbpediaUtil.getInstance().askIsResourceOfType(leftUri, rangeUri);
-//										boolean rightResourceHasCorrectType	= DbpediaUtil.getInstance().askIsResourceOfType(rightUri, domainUri);
-										
-										RDFNode leftResource	= model.createResource(leftUri);
-										RDFNode rightResource	= model.createResource(rightUri);
-										
-										Statement link			= model.createStatement(rightResource, model.createProperty(pattern.getPatternMapping().getUri()), leftResource);
-//										Statement labelLeft		= model.createStatement((Resource)leftResource, this.rdfsLabel, leftLabel);
-//										Statement labelRight	= model.createStatement((Resource)rightResource, this.rdfsLabel, rightLabel);
-//										Statement typeLeft		= model.createStatement(leftResource, this.rdfType, model.createResource(pattern.getPatternMapping().getRdfsDomain()));
-//										Statement typeRight		= model.createStatement(rightResource, this.rdfType, model.createResource(pattern.getPatternMapping().getRdfsRange()));
-										
-										model.addStatement(link);
-//										model.addStatement(labelLeft);
-//										model.addStatement(labelRight);
-//										model.addStatement(typeLeft);
-//										model.addStatement(typeRight);
-										
-										if ( !statementList.contains(link.toString()) ) {
-											
-											statementList.add(link.toString());
-											out.append("FoundString: " + foundString + Constants.NEW_LINE_SEPARATOR);
-											out.append("LeftLabel(Range):\t" + leftLabel + Constants.NEW_LINE_SEPARATOR);
-											out.append("Pattern: " + pattern.getNaturalLanguageRepresentation() + Constants.NEW_LINE_SEPARATOR);
-											out.append("RightLabel(Domain):\t" + rightLabel + Constants.NEW_LINE_SEPARATOR);
-											out.append("Statement created: " + link.toString() + Constants.NEW_LINE_SEPARATOR);
-											out.append(Constants.NEW_LINE_SEPARATOR);
-											System.out.println("Statement created: " + link);
-										}
+										statementList.add(link.toString());
+										out.append("FoundString: " + foundString + Constants.NEW_LINE_SEPARATOR);
+										out.append("LeftLabel(Domain):\t" + leftLabel + Constants.NEW_LINE_SEPARATOR);
+										out.append("Pattern: " + pattern.getNaturalLanguageRepresentation() + Constants.NEW_LINE_SEPARATOR);
+										out.append("RightLabel(Range):\t" + rightLabel + Constants.NEW_LINE_SEPARATOR);
+										out.append("Statement created: " + link.toString() + Constants.NEW_LINE_SEPARATOR);
+										out.append(Constants.NEW_LINE_SEPARATOR);
+										System.out.println("Statement created: " + link);
 									}
 								}
 							}
-							catch (RDFRDBException rdfrdbe) {
+							else {
 								
-								this.logger.error("Could not create statement!", rdfrdbe);
+								if ( leftContext.containsSuitableEntity(rangeUri) && rightContext.containsSuitableEntity(domainUri) ) {
+									
+									String leftLabel = leftContext.getSuitableEntity(rangeUri);
+									String rightLabel = rightContext.getSuitableEntity(domainUri);
+									
+									UriRetrieval uriRetrieval = new DbpediaUriRetrieval();
+									String leftUri = uriRetrieval.getUri(leftLabel);
+									String rightUri = uriRetrieval.getUri(rightLabel);
+									
+//											boolean leftResourceHasCorrectType	= DbpediaUtil.getInstance().askIsResourceOfType(leftUri, rangeUri);
+//											boolean rightResourceHasCorrectType	= DbpediaUtil.getInstance().askIsResourceOfType(rightUri, domainUri);
+									
+									RDFNode leftResource	= model.createResource(leftUri);
+									RDFNode rightResource	= model.createResource(rightUri);
+									
+									Statement link			= model.createStatement(rightResource, model.createProperty(pattern.getPatternMapping().getUri()), leftResource);
+//											Statement labelLeft		= model.createStatement((Resource)leftResource, this.rdfsLabel, leftLabel);
+//											Statement labelRight	= model.createStatement((Resource)rightResource, this.rdfsLabel, rightLabel);
+//											Statement typeLeft		= model.createStatement(leftResource, this.rdfType, model.createResource(pattern.getPatternMapping().getRdfsDomain()));
+//											Statement typeRight		= model.createStatement(rightResource, this.rdfType, model.createResource(pattern.getPatternMapping().getRdfsRange()));
+									
+									model.addStatement(link);
+//											model.addStatement(labelLeft);
+//											model.addStatement(labelRight);
+//											model.addStatement(typeLeft);
+//											model.addStatement(typeRight);
+									
+									if ( !statementList.contains(link.toString()) ) {
+										
+										statementList.add(link.toString());
+										out.append("FoundString: " + foundString + Constants.NEW_LINE_SEPARATOR);
+										out.append("LeftLabel(Range):\t" + leftLabel + Constants.NEW_LINE_SEPARATOR);
+										out.append("Pattern: " + pattern.getNaturalLanguageRepresentation() + Constants.NEW_LINE_SEPARATOR);
+										out.append("RightLabel(Domain):\t" + rightLabel + Constants.NEW_LINE_SEPARATOR);
+										out.append("Statement created: " + link.toString() + Constants.NEW_LINE_SEPARATOR);
+										out.append(Constants.NEW_LINE_SEPARATOR);
+										System.out.println("Statement created: " + link);
+									}
+								}
 							}
-							catch ( IndexOutOfBoundsException ioob ) {
-								
-//								System.out.println(foundString);
-//								System.out.println(nerTagged);
-//								System.out.println(patternWithOutVariables);
-//								
-//								ioob.printStackTrace();
-								this.logger.error("Could not create context for string " + foundString + ". NER tagged: " + nerTagged + " pattern: "  + patternWithOutVariables);
-							}
+						}
+						catch (RDFRDBException rdfrdbe) {
+							
+							this.logger.error("Could not create statement!", rdfrdbe);
+						}
+						catch ( IndexOutOfBoundsException ioob ) {
+							
+//							System.out.println(foundString);
+//							System.out.println(nerTagged);
+//							System.out.println(patternWithOutVariables);
+//							
+//							ioob.printStackTrace();
+							this.logger.error("Could not create context for string " + foundString + ". NER tagged: " + nerTagged + " pattern: "  + patternWithOutVariables);
 						}
 					}
 				}
@@ -213,5 +219,28 @@ public class CreateKnowledgeCommand implements Command {
 		catch (ParseException e) {
 			e.printStackTrace();
 		}
+	}
+	
+	private List<Pattern> getTopNPattern(PatternMapping mapping, int topN) {
+
+		List<Pattern> patternList = new ArrayList<Pattern>();
+		
+		for (Pattern p : mapping.getPatterns()) {
+			
+			if ( p.isUseForPatternEvaluation() && p.getNumberOfOccurrences() > 19 ) {
+				
+				patternList.add(p);
+			}
+		}
+		
+		Collections.sort(patternList, new Comparator<Pattern>() {
+
+			@Override
+			public int compare(Pattern pattern1, Pattern pattern2) {
+
+				return pattern2.getDoubleSupportConfidence().compareTo(pattern1.getDoubleSupportConfidence());
+			}
+		});
+		return patternList.subList(0, topN);
 	}
 }
